03-rancher-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: demo
spec:
  rules:
  - host: rancher-demo.home.monach.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: demo
            port: 
              number: 8080
